F/UP 쉬운작성 처리

--- a/app/css/bp_write.css
+++ b/app/css/bp_write.css
@@ -142,8 +142,14 @@
 .row.unit7 .btn-grid .btn{background-color: #a5bc00;}
 .row.unit8 .btn-grid .btn{background-color: #780100;}
 
-
-
+/*
+#bp_title {
+	border-style: solid;
+	border-color: red;
+	border-width: 5px;
+	background-color: red;
+}
+ */
 
 
 
