--- a/css/el_contentList.css
+++ b/css/el_contentList.css
@@ -1,3 +1,12 @@
+.page-title {
+	display:flex;
+	justify-content: space-between;
+	align-items: start;
+}
+.page-title .left {
+	display: flex;
+}
+
 #listTable span.label.V {
 	background-color: #a9daff;
 }
